# bolt

./: .devcontainer.json  .gitignore  Dockerfile  README.md  Untitled-1.ipynb  build.sh  conda_environment.yml  devcontainer.json  extension-script-09-12-22.code-workspace  requirements.txt  setup.py  testing_bolt.ipynb  valgrind-python.supp
bazel_temp/: BUILD  WORKSPACE  add.cpp  add.hpp  bazel-bazel_temp  bazel-bin  bazel-out  bazel-testlogs  example_test.py  my_pb_mod.cc
cpp/: .gdbinit  .gitignore  BUILD  CMakeLists.txt  CMakeLists_old.txt  WORKSPACE  __init__.py  default_breakpoints.gdb  example_test.py  mithral_torch.cpp  mithral_wrapped.cpp  my_pb_mod.cc  pybind11_wrapper.cpp  reproduce_valgrind  reproduce_valgrind_error  tasks.py
cpp/test/: main.cpp
experiments/: bind.cpp  copy_to_amm.py  cpp_debug_py.txt  cpp_debug_py2.txt  cpp_debug_py3.txt  example_test.py  graph_mithral.py  mat_calc.py  pybind11_test.py  run_amm_main.py  tasks.py  test_mithral_for_embeddings.py  test_mithral_nn.py  test_serialize_pybind11.py
experiments/python/: amm.py  amm_figs2.py  amm_main.py  amm_methods.py  amm_results2.py  clusterize.py  debias_scratch.py  figs.py  main.py  matmul_datasets.py  product_quantize.py  pyience.py  subspaces.py  utils.py  vq_amm.py  vquantizers.py
pybind11_example/: add.cpp  add.h  bind.cpp  tasks.py
pytorch_opp/: CMakeLists.txt  main.cpp  op.cpp  testing_bolt.ipynb
pytorch_opp/cpp_inference_example/: CMakeLists.txt  infer.cpp  run_class.py
pytorch_opp/cpp_inference_example/custom_class/: CMakeLists.txt  class.cpp
pytorch_opp/make_op/: CMakeLists.txt  testing_bolt.ipynb
pytorch_opp/make_op/warp_perspective/: op.cpp
pytorch_opp/pytorch_get_version/: CMakeLists.txt
pytorch_opp/warp_perspective/: CMakeLists.txt
workspaces/: extension-script-09-12-22.code-workspace  extension-script-bolt.code-workspace  mithral-cpp-03-29.code-workspace  new-mac-bolt.code-workspace
(+14 files in other folders)
